2005-01-31  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwindow.c
	* winmultiwindowwndproc.c:
	Create windows with SWP_NOACTIVATE flag (updated) (Kensuke Matsuzaki)

2005-01-31  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwndproc.c:
	Fixes for window ordering problem (updated) (Kensuke Matsuzaki)

2005-01-31  Alexander Gottwald  <ago at freedesktop dot org>

	* winconfig.c:
	Added hungarian keyboard layout.

2005-01-31  Alexander Gottwald  <ago at freedesktop dot org>

	* winmessages.h
	* winmsg.h
	* winmsg.c
	* winmultiwindowwndproc.c
	* winwin32rootlesswndproc.c
	* winwndproc.c:
	Make logging of messages configurable with environment variables

2005-01-31  Alexander Gottwald  <ago at freedesktop dot org>

	* InitOutput.c:
	resolve SHGetFolderPath dynamicly since it is not available on all Windows 
	systems.

2005-01-12  Alexander Gottwald  <ago at freedesktop dot org>

	* winmsg.c
	* winmsg.h:
	Introduce function winTrace which prints log message with verbosity 10
	* winmultiwindowwindow.c:
	Use winTrace for 3 heavily called functions

2005-01-11  Alexander Gottwald  <ago at freedesktop dot org>

	* XWin.man:
	Document the -silent-dup-error switch

2005-01-11  Alexander Gottwald  <ago at freedesktop dot org>

	* winkeyhook.c:
	Do not grab ALT-TAB when window is in multiwindow mode
	
2005-01-11  Alexander Gottwald  <ago at freedesktop dot org>

	* winprefs.h:
	Fix crash with not matching definitions of PATH_MAX
	
2005-01-10  Alexander Gottwald  <ago at freedesktop dot org>

	* winkeybd.h
	* winkeynames.h:
	Adjust keysyms for  Hiragana_Katakana toggle and backslash/underscore
	on Japanese and ABNT2 keyboards

2005-01-10  Alexander Gottwald  <ago at freedesktop dot org>

	* winkeybd.h
	* winkeyhook.c
	* winwndproc.c:
	Make keyhook feature work in multiwindowmode too
	Hook windows keys

2005-01-08  Alexander Gottwald  <ago at freedesktop dot org>

	* winblock.c:
	Fix a possible null-pointer dereference	(Keishi Suenaga)
