@@ -148,6 +148,7 @@ winCreateBoundingWindowWindowed (ScreenPtr pScreen)
   WNDCLASS		wc;
   RECT			rcClient, rcWorkArea;
   DWORD			dwWindowStyle;
+  BOOL			fForceShowWindow = FALSE;
   char			szTitle[256];
   
   winDebug ("winCreateBoundingWindowWindowed - User w: %d h: %d\n",
@@ -169,9 +170,19 @@ winCreateBoundingWindowWindowed (ScreenPtr pScreen)
 #endif
       )
     {
-      dwWindowStyle |= WS_CAPTION;
-      if (pScreenInfo->fScrollbars)
-	dwWindowStyle |= WS_THICKFRAME | WS_MAXIMIZEBOX;
+        /* Try to handle startup via run.exe. run.exe instructs Windows to 
+         * hide all created windows. Detect this case and make sure the 
+         * window is shown nevertheless */
+        STARTUPINFO   startupInfo;
+        GetStartupInfo(&startupInfo);
+        if (startupInfo.dwFlags & STARTF_USESHOWWINDOW && 
+                startupInfo.wShowWindow == SW_HIDE)
+        {
+          fForceShowWindow = TRUE;
+        } 
+        dwWindowStyle |= WS_CAPTION;
+        if (pScreenInfo->fScrollbars)
+            dwWindowStyle |= WS_THICKFRAME | WS_MAXIMIZEBOX;
     }
   else
     dwWindowStyle |= WS_POPUP;
@@ -345,6 +356,12 @@ winCreateBoundingWindowWindowed (ScreenPtr pScreen)
 #if CYGDEBUG
   winDebug ("winCreateBoundingWindowWindowed - CreateWindowEx () returned\n");
 #endif
+
+  if (fForceShowWindow)
+  {
+      ErrorF("winCreateBoundingWindowWindowed - Setting normal windowstyle\n");
+      ShowWindow(*phwnd, SW_SHOW);      
+  }
 
   /* Get the client area coordinates */
   if (!GetClientRect (*phwnd, &rcClient))
